--- a/index.html
+++ b/index.html
@@ -562,11 +562,11 @@ personImg: "front_photo.png"
  
  },
  {
-  "message": "It was on February 15/16, 2024, when I saw you for the first time outside the canteen. You were wearing a black top and blue jeans, walking with your friends, smiling, and talking — you looked really pretty. Later, I learned your name during KYT. A few months later, I moved to Marsh, and then you moved to the USA.You came back in September, and at first, I thought you were very strict. Honestly, I was a bit afraid to talk to you at first, but once we actually started talking, I realized you were completely different.I found that you’re the most"
+  "message": "It was on February 15/16, 2024, when I saw you for the first time outside the canteen. You were wearing a black top and blue jeans, walking with your friends, smiling, and talking — your hair moving with the wind, like they were quietly playing together. You looked really amazing. Later, I learned your name during KYT. A few months later, I moved to Marsh, and then you moved to the USA.You came back in September, and at first, I thought you were very strict. Honestly, I was a bit afraid to talk to you at first, but once we actually started talking, I realized you were completely different.I found that you’re the most"
   , "mediaUrl": "walking_girl.png" 
 },
  {
-  "message": "amazing company anyone could ask for, and I genuinely enjoy talking to you more than anyone else (I don’t even know why — I just do).You’re the most genuine and real person I’ve ever met — no show-off & all — just this soft, innocent charm, like a little cute child whose smile lifts the weight off everything around and whose presence brings a quiet, comforting peace. I really wish I could talk to you more. There’s something wonderfully different about your energy — warm, genuine, and so easy to trust; I can’t quite explain it, but it just feels different."
+  "message": "amazing company anyone could ask for, and I genuinely enjoy talking to you more than anyone else (I don’t even know why — I just do).You’re the most genuine and real person I’ve ever met — no show-off & all — just this soft, innocent charm, like a little cute child whose smile lifts the weight off everything around and whose presence brings a quiet, comforting peace.You’re like that quiet place birds return to after a long flight — calm, familiar, and full of peace. I really wish I could talk to you more. There’s something wonderfully different about your energy — warm, genuine, and so easy to trust; I can’t quite explain it, but it just feels different."
  },
  {
   "message": "That energy is rare, Anjali. Whenever we talk, my day always gets better—maybe you’re a little lucky for me. Thank you for always suggesting such good movies and series—you seriously have great taste! You’re also a really interesting person with so many skills. You’re artistic, love doing arts and crafts, can play a bit of piano and the mouth organ, are skilled in gardening, great at games (like Chess — I’ve learned from you, but obviously, I’m not as good as you.), and love reading.You take such lovely photos — especially of the moon and that one of Saturn! I’m sure there are so many talents you have that I haven’t even discovered yet.",
@@ -579,8 +579,10 @@ personImg: "front_photo.png"
   },
 
 
-  {"message":"Sometimes, I catch that quiet sadness behind your smile, even when you’re trying to look okay. I’m not sure why others don’t notice it — maybe they do, maybe they don’t, but I do. I always do. There are moments I want to ask if you’re alright, but the words don’t come out — and when I finally do, you say you’re fine, even though I can feel you’re not. Maybe you think I wouldn’t understand… maybe you’re right, or maybe not. But still, if you ever feel like talking — about anything at all — I’m here. Trust me, I’m a good listener, and I always will be."},
   {
+  "message": "Sometimes, I catch that quiet sadness behind your smile, even when you’re trying to look okay. I’m not sure why others don’t notice it — maybe they do, maybe they don’t, but I do. I always do. There are moments I want to ask if you’re alright, but the words don’t come out — and when I finally do, you say you’re fine, even though I can feel you’re not. Maybe you think I wouldn’t understand… maybe you’re right, or maybe not.But still, if you ever feel like talking — about anything at all — you can. Trust me, I’m a good listener, and I always will be.And even if talking doesn’t feel right, sometimes just quiet company helps — like sharing a cup of coffee or tea, no words needed. Sometimes, that’s enough. You can count me in for that."
+},
+{
     "message": "I thought this quote suits you perfectly —\n“She carries a quiet kind of magic — the kind that doesn’t seek attention, but leaves everything she touches a little more beautiful, a little more alive.”\n- Butterflies Rising"
   },
 
@@ -611,7 +613,8 @@ personImg: "front_photo.png"
  "id": "star1",
  // Adjusted positions slightly to better fit the 'sky' area of girls.jpg
  "position": "top: 18%; left: 25%;", 
- "message": "Funny<br>Sometimes you say things that are so silly yet somehow make perfect sense — unintentionally hilarious!<br><br>Honestly, I always thought you’d be even funnier after a drink… that’s just my theory though 😄"
+ "message": "Downside<br>If I had to pick one downside, maybe it’s that you’re a little too busy — or maybe you just like keeping people guessing"
+
 },
 {
  "id": "star2",
@@ -621,12 +624,12 @@ personImg: "front_photo.png"
 {
  "id": "star3",
  "position": "top: 23%; left: 67%; transform: translateX(-50%);", // Centered star
- "message": "Downside<br>If I had to pick one downside, maybe it’s that you’re a little too busy — or maybe you just like keeping people guessing"
+ "message": "Funny<br>Sometimes you say things that are so silly yet somehow make perfect sense — unintentionally hilarious!<br><br>Honestly, I always thought you’d be even funnier after a drink… that’s just my theory though 😄"
 }
 ]
 },
 {
-  "message": "I just wanna say one last thing from my side, and please remember this always — I know I can’t solve everything or make every problem disappear; no one really can — some battles you’re meant to face on your own. But I’ll always try to be there — to listen, to talk, and to make sure you never feel alone. You can share anything with me, trust me, anything — whether it’s something random or something that truly matters. And if you don’t like my company, that’s absolutely fine — just be with whoever’s company you enjoy, because all I really want is to see you happy, with lots of smiles. Never feel like you don’t have anyone by your side — you’re never truly alone. I just wanna be someone you can rely on — not perfect, but always real."
+    "message": "I just wanna say one last thing from my side, and please remember this always — I know I can’t solve everything or make every problem disappear; no one really can — some battles you’re meant to face on your own. But I’ll always try to be there — to listen, to talk, and to make sure you never feel alone. You can share anything with me, trust me, anything — whether it’s something random or something that truly matters. And if you don’t like my company, that’s absolutely fine — just be with whoever’s company you enjoy, because all I really want is to see you happy, with lots of smiles. Never feel like you don’t have anyone by your side — you’re never truly alone. And maybe someday, if you read this, you’ll laugh too. I just wanna be someone you can rely on — not perfect, but always real."
 },
 {
   "message": "Many, many happiest birthdays again! ✨ \nAlways keep that cute smile just like you always do, and stay happy — that’s the only thing that truly matters.\nI wish that every single day brings you countless reasons to smile — moments filled with peace, warmth, and gentle joy. May life continue to gift you endless happiness, and enough strength to face whatever comes your way. Take care of yourself always, and never stop being the beautiful soul that you are. \n---- END ----"
