--- a/index.html
+++ b/index.html
@@ -699,8 +699,12 @@
         "message": "I just want to say one last thing from my side. I know I can’t solve everything or make every problem disappear; no one really can. Some battles are meant to be faced on your own. But I’ll always try to create a space where you can talk about anything, forget your problems for a moment, enjoy the time, and never feel alone. And if you don’t like my company, that’s absolutely fine. Just be with whoever’s company you enjoy, because all I really want is to see you happy, with lots of smiles. Never feel like you don’t have anyone by your side — you’re never truly alone. And maybe someday, if you read this, you’ll laugh too. I may not be the perfect friend, but I’m always here whenever you need me."
       },
       {
-        "message": "Many, many happiest birthdays again! ✨ \nAlways keep that cute smile just like you always do, and stay happy — that’s the only thing that truly matters.\nI wish that every single day brings you countless reasons to smile — moments filled with peace, warmth, and gentle joy. May life continue to gift you endless happiness, and enough strength to face whatever comes your way. Take care of yourself always, and never stop being the beautiful soul that you are. \n---- END ----"
+        "message": "Many, many happiest birthdays again ✨\nAlways keep that cute smile just the way you do, and stay happy, because that truly matters.\n\nI wish every day brings you small, quiet reasons to smile. Moments filled with peace, warmth, and gentle joy. May life keep gifting you happiness, and the strength to face whatever comes your way. Take care of yourself always, and never stop being the beautiful soul that you are."
+      },
+      {
+        "message": "And now, just a little spoiler time.\nThat gift box I gave you holds tiny pieces of things you love. When you open it, you’ll find a few surprises waiting patiently. One I mentioned just now, a few hair clips that suit you perfectly. The rest, you’ll discover one by one. And that plant I gave you, the one you once spoke about, the one you liked so much but never bought because your mom had said it might not be right to keep it at home, even though you really wanted it. I remembered. I hope you keep it with you and take good care of it.\n\nAll of this was done for just one thing.\nTo see one good, cute smile. Be happy, yrrrrrr.\n\n— END —"
       }
+
 
     ];
 
